# cnsoftbei2024

./: .gitignore  CMakeLists.txt  CMakeLists_TensorRT.txt  Camera.cpp  MapImageProcessing.cpp  README.md  img  img.cpp  img2.cpp  img3.cpp  img4.cpp  img5.cpp  img6.cpp  img7.cpp  img7.cpp_bk0  img7.cpp_bk1  img7.cpp_bk2  img7.cpp_bk3  img7.cpp_bk4  img7.cpp_bk5  img7.cpp_bk6  move.cpp  take_photo5.cpp  test_corret.cpp  test_corret_v1.cpp  test_cuda.cpp  test_line.cpp  test_matchTemplate.cpp  test_move.cpp  test_video.cpp  test_vision_v0.cpp  vision_move_v0.cpp  vision_move_v1_part.cpp
24SoftCupCodes/24SoftCupFOlder/: ._data  ._detectModels
24SoftCupCodes/24SoftCupFOlder/code/: ._yolov8-tensorrt
24SoftCupCodes/24SoftCupFOlder/code/csrc/detect/end2end/: CMakeLists.txt
24SoftCupCodes/24SoftCupFOlder/code/csrc/detect/end2end/include/: yolov8.hpp
24SoftCupCodes/24SoftCupFOlder/code/csrc/jetson/detect/: CMakeLists.txt
24SoftCupCodes/24SoftCupFOlder/code/csrc/jetson/detect/include/: yolov8.hpp
24SoftCupCodes/24SoftCupFOlder/code/testVoice/: CMakeLists.txt  voice.cpp
24SoftCupCodes/24SoftCupFOlder/code/yolov8-tensorrt/: ._detect
24SoftCupCodes/24SoftCupFOlder/code/yolov8-tensorrt/detect/: main.cpp
24SoftCupCodes/24SoftCupFOlder/code/yolov8-tensorrt/detect/include/: ._common.hpp  ._yolov8.hpp  yolov8.hpp
24SoftCupCodes/24SoftCupFOlder/detectModels/: ._train8
24SoftCupCodes/24SoftCupFOlder/detectModels/train8/: ._weights
24SoftCupCodes/24SoftCupFOlder/detectModels/train8/weights/: ._TensorRT  ._best-sim.onnx  ._best.pt  ._best_openvino_model  ._best_paddle_model  ._last.pt
config/: detectMid.yaml  stereo_camera_config.yaml
faceLightSDK_Nano/: 1  main.cpp
include/: Camera.h  Detect_TensorRT.hpp  DogMotion.h  DogVision.h  FrontCamera.h  MapImageProcessing.h  common.hpp  move.h
scripts/: alias.bashrc  build_cuda_cmake  restart_camera2_123.sh  startup.sh  startup2.sh
src/: DogMotion.cpp  DogVision.cpp  FrontCamera.cpp  detect_cuda.cpp  detect_main.cpp  main.cpp
